# IMServer

./: .gitignore  CMakeLists.txt  README.md
Service/client/: main.cpp
Service/model/: FriendModel.cpp  FriendModel.hpp  Group.hpp
Service/server/: ChatServer.cpp
Service/service/: ChatService.cpp
client/: CMakeLists.txt
config/: table.sql
model/: CMakeLists.txt  GroupModel.cpp  GroupModel.hpp  GroupUser.hpp  OfflineMessageModel.cpp  UserModel.cpp  UserModel.hpp
mysql/: MySQL.hpp
redis/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
service/: CMakeLists.txt  ChatService.hpp
